--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>La página que estabas buscando no existe (404)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,9 +50,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>La página que estas buscando no existe.</h1>
+    <p>Puede que hayas escrito mal la dirección o que la página haya sido movida.</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Disculpa el inconveniente.</p>
 </body>
 </html>
