--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Oh oh! Algo pasó y no está funcionando (500)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,8 +50,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Lo sentimos pero algo falló.</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Si tienes un problema como estos y estas estancado escribe al administrador.</p>
 </body>
 </html>
